# HSE_EVENTS_BOT

./: .env.example  .gitattributes  .gitignore  README.md  add_test_events.py  add_test_events.sql  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt
admin-panel/: index.html  package-lock.json  package.json  vite.config.ts
admin-panel/src/: App.tsx  index.css
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_referral_fields.py  003_add_admin_users_table.py  004_add_privacy_settings.py  005_add_reviews_and_comments.py
docker/: admin-panel.Dockerfile  api.Dockerfile  bot.Dockerfile  nginx-admin.conf
scripts/: create_admin.py  healthcheck.py
src/: __init__.py  config.py
src/api/: main.py
src/api/admin/: auth.py  (+4 more)
src/bot/: __init__.py  main.py
src/database/: base.py
src/parsers/: README.md  __init__.py  allevents_parser.py  base.py  browser_parser.py  date_utils.py  generic_parser.py  gorodzovet_parser.py  habr_parser.py  it52_parser.py  kassir_parser.py  kudago_parser.py  milo_parser.py  networkly_parser.py  parser_manager.py  qtickets_parser.py  scheduler.py  timepad_parser.py  topacademy_parser.py  yandex_afisha.py
src/services/: __init__.py  attendance_service.py  calendar_service.py  event_service.py  friendship_service.py  notification_service.py
src/utils/: logger.py
tests/: test_config.py  test_load.py  test_performance.py
tests/test_api/: conftest.py  test_admin_auth.py  test_admin_events.py
tests/test_bot/: test_imports.py  test_user_repository.py
tests/test_parsers/: __init__.py  test_date_utils.py
(+43 files in other folders)
