[tool.poetry]
name = "nn-events-bot"
version = "0.1.0"
description = "Telegram bot for aggregating IT and entertainment events in Nizhny Novgorod"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
redis = "^5.0.1"
aiohttp = "^3.9.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
vk-api = "^11.9.9"
apscheduler = "^3.10.4"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
playwright = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
